# gp8-clock

./: .gitignore  CMakeLists.txt  README  micro.ioc  stm32.cmake
enclosure/: Power.dxf  a.stl  b.stl  c.3mf  c.stl  icon-test.scad  transmitter.dxf  transmitter.scad
hw-design/: gp8-clock.bak  gp8-clock.kicad_pcb  gp8-clock.kicad_pcb-bak  power.sch
hw-design/receiver/: bluetooth.bak  fp-info-cache  gp8-clock-cache.lib  gp8-clock-rescue.lib  gp8-clock.bak  gp8-clock.kicad_pcb  gp8-clock.kicad_pcb-bak  gp8-clock.net  gp8-clock.ods  gp8-clock.pro  gp8-clock.sch  power.bak  power.sch  screen.sch  sym-lib-table
hw-design/receiver/board-outline/: drawing1.dxf
hw-design/receiver/receiver-gerber-r1/: gp8-clock-B.Cu.gbr  gp8-clock-B.Mask.gbr  gp8-clock-B.SilkS.gbr  gp8-clock-Edge.Cuts.gbr  gp8-clock-F.Cu.gbr  gp8-clock-F.Mask.gbr  gp8-clock-F.SilkS.gbr  gp8-clock-NPTH.drl  gp8-clock.drl
hw-design/receiver/receiver-gerber-r2/: gp8-clock-B.Cu.gbr  gp8-clock-B.Mask.gbr  gp8-clock-B.SilkS.gbr  gp8-clock-Edge.Cuts.gbr  gp8-clock-F.Cu.gbr  gp8-clock-F.Mask.gbr  gp8-clock-F.SilkS.gbr  gp8-clock-NPTH.drl  gp8-clock.drl
hw-design/receiver/receiver-gerber-r3/: gp8-clock-B.Cu.gbr  gp8-clock-B.Mask.gbr  gp8-clock-B.SilkS.gbr  gp8-clock-Edge.Cuts.gbr  gp8-clock-F.Cu.gbr  gp8-clock-F.Mask.gbr  gp8-clock-F.SilkS.gbr  gp8-clock-NPTH.drl  gp8-clock-PTH.drl
hw-design/receiver/rescue-backup/: gp8-clock-2018-02-15-12-23-03.pro  power-2018-02-15-12-23-03.sch  screen-2018-02-15-12-23-03.sch
hw-design/transmitter/: sym-lib-table  transmitter-cache.lib  transmitter-kradex.kicad_pcb  transmitter-rescue.lib  transmitter.bak  transmitter.csv  transmitter.kicad_pcb  transmitter.kicad_pcb-bak  transmitter.net  transmitter.pro  transmitter.sch  transmitter.step
hw-design/transmitter/board-outline/: drawing1.dxf
hw-design/transmitter/rescue-backup/: transmitter-2018-02-14-11-59-30.pro  transmitter-cache-2018-02-14-11-59-30.lib
hw-design/transmitter/transmitter-gerber-r1/: transmitter-B.Cu.gbr  transmitter-B.Mask.gbr  transmitter-B.SilkS.gbr  transmitter-Edge.Cuts.gbr  transmitter-F.Cu.gbr  transmitter-F.Mask.gbr  transmitter-F.SilkS.gbr  transmitter-NPTH.drl  transmitter.drl
hw-design/transmitter/transmitter-gerber-r2/: transmitter-B.Cu.gbr  transmitter-B.Mask.gbr  transmitter-B.SilkS.gbr  transmitter-Edge.Cuts.gbr  transmitter-F.Cu.gbr  transmitter-F.Mask.gbr  transmitter-F.SilkS.gbr  transmitter-NPTH.drl  transmitter.drl
src/: 7segmentLed.c  7segmentLed.h  Adc.cc  Adc.h  AdcChannel.cc  AdcChannel.h  Button.cc  Button.h  Buzzer.cc  Buzzer.h  Debug.cc  Debug.h  FastStateMachine.cc  FastStateMachine.h  History.cc  History.h  I2CLcdDataLink.cc  I2CLcdDataLink.h  IDisplay.h  ILcdDataLink.h  ILcdDdriver.h  InfraRedBeam.cc  InfraRedBeam.h  PCF85176Driver.cc  PCF85176Driver.h  STM32F091CBU6_FLASH.ld  StopWatch.cc  StopWatch.h  T145003.cc  T145003.h  Timer.cc  Timer.h  config.h  debugLed.c  debugLed.h  main.c  main.cc  startup_stm32f030x8.s  startup_stm32f091xc.s  stm32f4xx_hal_conf.h  (+12 more)
